Opened 16 years ago

Closed 16 years ago

#2293 closed bug (fixed)

KDL during boot when scanning for devices.

Reported by: bga Owned by: axeld
Priority: normal Milestone: R1
Component: System/Kernel Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Since the chnage in the driver architeture, my machine does not boot Haiku anymore. It crashes when the ahci bus calls ip on the pci bus. KDL capture attched. Let me know if you need more information.

Attachments (1)

kdl.png (433.2 KB ) - added by bga 16 years ago.
KDL capture.

Download all attachments as: .zip

Change History (6)

by bga, 16 years ago

Attachment: kdl.png added

KDL capture.

comment:1 by axeld, 16 years ago

What revision are you testing with? Also, if at all possible, please enable tracing in device_manager.cpp, and devfs.cpp, and attach a full log until that error comes. The output of the dm_tree KDL command might also be helpful.

comment:2 by axeld, 16 years ago

You could also add some debug output to ahci_supports_device(), and pci_device_get_pci_info() to see where and why it fails exactly.

comment:3 by bga, 16 years ago

Since the change in the driver architeture, my machine does not boot Haiku anymore. It crashes when the ahci bus calls ip on the pci bus. KDL capture attched. Let me know if you need more information.

As soon as I am back at my computer at home I will try tracing it and will post the results. Didn´t try anything like that yet because I am not near my Haiku computer.

comment:4 by mmlr, 16 years ago

This is probably fixed in hrev25867. Please retest.

comment:5 by bga, 16 years ago

Resolution: fixed
Status: newclosed

Hi Michael.

Yeah, it seems to be working now. Thanks. Marking fixed.

Note: See TracTickets for help on using tickets.