* The bus value of child devices are not necessarily the same as the one of   the parent bus. It is possible that there are other busses below the root   bus and we must therefore always iterate through the child devices when   searching for a device with a bus unequal to our own. Otherwise devices for   non-null busses could not be found which would lead to crashes in operations   involving them. * Adding a panic in case finding a device failed as this should clearly not   happen.

This probably fixes bug #2293 and might affect #2284 too.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@25867 a95241bf-73f2-0310-859d-f6bbb57e9c96